--- a/calculator.css
+++ b/calculator.css
@@ -1,29 +1,31 @@
-.calculator{
-    /* border: 5px red dotted; */
-    width: 50%;
-    /* height: 400px; */
-    margin: auto;
-    margin-top: 70px;
+.heading{
+    font-family: "Lucida Console", "Courier New", monospace;
+    display:flex;
+    color: whitesmoke;
+    background-color: rgb(48, 48, 48);
+    font-size: larger;
+    line-height: 15px;
     
 }
-.heading{
-    background-color: rgb(74, 73, 73);
-    margin-top: 0px;
-    margin-bottom: 0px;
-    width: 99%;
+.calculator{
+    border: 5px  rgb(74, 73, 73) solid;
+    background-color: rgb(74, 73, 73) ;
+    width: 50%;
+    /* height: 700px; */
     margin: auto;
-    text-align:center;
-    font-family:'Times New Roman', Times, serif;
-    color: #84878e;
-    font-weight:900;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    
 }
+
 .section1{
-    /* height: 70px; */
-    width: 90%;
+   
     background-color: #b4e49e;
-    margin: auto;
-    margin-top: 0px;
-    border: 30px rgb(74, 73, 73) solid;
+    height: 80px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top:40px;
     font-size: x-large;
     text-align:right;
 }
@@ -32,75 +34,33 @@
     /* height: 270px; */
     width: 90%;
     background-color: #b4b7bf;
-    margin: auto;
-    border: 30px rgb(74, 73, 73) solid;
+    width: 90%;
+    margin: 5%;
+    /* border: 30px rgb(74, 73, 73) solid; */
 }
 button{
-    height: 50px;
+    /* height: 50px; */
     width: 15%;
-    /* border-radius: 50%; */
+    /* border-radius: 10%; */
     margin-left: 4%;
     margin-top: 15px;
     margin-bottom: 5px;
     font-size:x-large;
+    font-weight: bold;
+    /* background-color: #82bacf; */
 }
 footer{
     text-align: center;
 }
 
-@media screen and (max-width : 800px) {
-    body{
-        /* background-color: blueviolet; */
-    }
-    .heading
-    {
-        /* background-color: red; */
-        width:100%;
-        margin: auto;
-        border: 13px solid rgb(74, 73, 73);
+@media screen and (max-width : 400px) {
+    /* body{
+        background-color: rgb(226, 125, 43);
+    } */
+    .section1{
+        font-size:large ;
     }
     button{
-        width:12%;
-        font-size: large;
-    }
-}
-@media screen and (max-width : 700px) {
-    body{
-        /* background-color: rgb(43, 226, 83); */
-    }
-    .heading
-    {
-        /* background-color: red; */
-        width:100%;
-        margin: auto;
-        border: 15px solid rgb(73, 74, 74);
-    }
-}
-@media screen and (max-width : 600px) {
-    body{
-        /* background-color: rgb(43, 189, 226); */
-    }
-    .heading
-    {
-        /* background-color: red; */
-        width:100%;
-        margin: auto;
-        border: 17px solid rgb(74, 73, 73);
-    }
-}
-@media screen and (max-width : 500px) {
-    body{
-        /* background-color: rgb(226, 125, 43); */
-    }
-    .heading
-    {
-        /* background-color: red; */
-        width:100%;
-        margin: auto;
-        border: 18.5px solid rgb(74, 73, 73);
-
-    }
-    button{
-        font-size:small;
+        font-size:large;
     }
 }
